@@ -34,6 +34,8 @@ Starting in 10, the Maven POM for SolrJ does not refer to SolrJ modules like Zoo
 
 * The `jaegertracer-configurator` module, which was deprecated in 9.2, is removed. Users should migrate to the `opentelemetry` module.
 
+* `OpenTelemetry` libraries were removed and replaced with `OpenTracing` libraries. Any Java agents providing `OpenTelemetry` tracers will no longer work. Telemetry tags `http.status_code` and `http.method` have been deprecated, newer version of the tags have been added to the span data: `http.response.status_code`, `http.request.method`.
+
 * The `analytics` module, which was deprecated in 9.2, is removed.
 
 * The sysProp `-Dsolr.redaction.system.pattern`, which allows users to provide a pattern to match sysProps that should be redacted for sensitive information,
